Refactoring => OpenTelemetryConstants / Appsettings.json

--- a/Order.API/appsettings.json
+++ b/Order.API/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "OpenTelemetry": {
+    "ServiceName": "Order.API",
+    "ServiceVersion": "1.0.0",
+    "ActiviySourceName": "ActivitySource.Order.API"
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
