--- a/Order.API/Order.API.csproj
+++ b/Order.API/Order.API.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\OpenTelemetry.Shared\OpenTelemetry.Shared.csproj" />
+    <ProjectReference Include="..\OpenTelemetry.Shared\OpenTelemetry.Shared.csproj" />
   </ItemGroup>
 
 </Project>
