--- a/Common.Shared/Common.Shared.csproj
+++ b/Common.Shared/Common.Shared.csproj
@@ -8,4 +8,7 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.3.2" />
+	</ItemGroup>
 </Project>
