Aadded SqlServer ConnectionString => AppsettingJson/ Program.cs

--- a/Order.API/appsettings.json
+++ b/Order.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost,1445;Database=ObservabilityOrderDb;User=sa;Password=Password12*;TrustServerCertificate=True"
+  },
   "OpenTelemetry": {
     "ServiceName": "Order.API",
     "ServiceVersion": "1.0.0",
