--- a/Stock.API/Stock.API.csproj
+++ b/Stock.API/Stock.API.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common.Shared\Common.Shared.csproj" />
+    <ProjectReference Include="..\OpenTelemetry.Shared\OpenTelemetry.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
