Added StockService => Order.API

--- a/Order.API/appsettings.json
+++ b/Order.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApiServices": {
+    "StockApi": "https://localhost:7061"
+  },
   "ConnectionStrings": {
     "SqlServer": "Server=localhost,1445;Database=ObservabilityOrderDb;User=sa;Password=Password12*;TrustServerCertificate=True"
   },
